# documentation-portal

./: . prettierignore  .dockerignore  .gitignore  .prettierignore  .prettierrc.js  .yarnrc.yml  .yo-rc.json  Dockerfile  Dockerfile.server  README.md  app.js  gulpfile.js  keti-prod.json  keti.json  logger.js  package-lock.json  package.json  query.json  test_server_deploy.sh
apps/build_manager/: Dockerfile  README.md  publish_docker.sh  pyproject.toml  run_tests.sh
apps/build_manager/build_manager/: main.py
apps/build_manager/tests/: test_build_manager.py
apps/build_manager/tests/resources/input/: changed_files.txt
apps/config_deployer/: Dockerfile  README.md  build_docker.sh  main.py  publish_docker.sh  pyproject.toml  test_config_deployer.sh
apps/config_deployer/config_deployer/: main.py  processor.py
apps/config_deployer/tests/: test_config_deployer.py
apps/config_deployer/tests/admin_panel_cli/: test_admin_panel_cli.py
apps/config_deployer/tests/admin_panel_cli/clone/expected/: _clone-docs-product-claimcenter-to-claimcenter-for-guidewire-cloud.json  _clone-docs-version-9.0.10-to-9.0.11.json
apps/config_deployer/tests/admin_panel_cli/merge/expected/: merge-all.json
apps/config_deployer/tests/admin_panel_cli/merge/input/: portal2.json
apps/config_deployer/tests/admin_panel_cli/remove/expected/: _remove-docs-product-billingcenter.json  _remove-docs-version-10.1.1.json
apps/config_deployer/tests/admin_panel_cli/split/expected/: _split-docs-chunk-1.json  _split-docs-metadata.product-claimcenter.json
apps/config_deployer/tests/admin_panel_cli/split_by_chunk/expected/: _split-docs-chunk-0.json
apps/config_deployer/tests/admin_panel_cli/update/expected/: _update-docs-product-claimcenter-to-xcenter.json  _update-docs-version-10.1.2-to-10.1.3.json
apps/config_deployer/tests/admin_panel_cli/update/input/: docs.json
apps/config_deployer/tests/resources/clone/expected/: clone-metadata.version-9.0.10-to-9.0.11.json
apps/config_deployer/tests/resources/create/expected/: create-docs-new.json
apps/config_deployer/tests/resources/deploy/expected/: config.json
apps/config_deployer/tests/resources/deploy/input/: guidewire-cloud-standards.json
apps/config_deployer/tests/resources/expected/: config_dev.json  config_int.json  config_prod.json  config_staging.json
apps/config_deployer/tests/resources/extract/expected/: extract-metadata.product-billingcenter.json  extract-removed-metadata.product-billingcenter.json
apps/config_deployer/tests/resources/input/config/: server-config.json
apps/config_deployer/tests/resources/merge/expected/: merge-all.json
apps/config_deployer/tests/resources/merge/input/: guidewire-cloud-platform.json  guidewire-cloud-standards.json  is-upgrade-guides.json  portal2.json
apps/config_deployer/tests/resources/split/input/: docs.json
apps/config_tester/: pyproject.toml  test_config.sh  test_server_config.py
apps/doc_crawler/: .env-file  Dockerfile  Makefile  README.md  add_builds_to_elasticsearch.py  add_config_properties_to_elasticsearch.py  add_docs_to_elasticsearch.py  add_sources_to_elasticsearch.py  build_docker.sh  get_unique_versions.py  local_image_run.sh  merge_docs_sources_builds.py  publish_docker.sh  pyproject.toml  run_doc_crawler.sh  run_tests.sh  test_config.sh  test_doc_crawler.sh
apps/doc_crawler/doc_crawler/: elasticsearch.py  items.py  main.py  pipelines.py  selenium_test.py  settings.py
apps/doc_crawler/doc_crawler/spiders/: doc_portal_spider.py
apps/doc_crawler/kube/: deployment-prod.yml  deployment.yml
apps/doc_crawler/tests/test_doc_crawler/: create_test_environment.sh  test_doc_crawler.py
apps/doc_crawler/tests/test_doc_crawler/resources/: docker-compose.yml
apps/l10n_page_builder/: Dockerfile  build_docker.sh  main.py  publish_docker.sh  pyproject.toml  test_l10n_page_builder.sh
apps/l10n_page_builder/l10n_page_builder/: main.py
apps/l10n_page_builder/tests/: test_l10n_page_builder.py
apps/lion_page_builder/: Dockerfile  build_docker.sh  publish_docker.sh  pyproject.toml  test_lion_page_builder.sh
apps/lion_page_builder/lion_page_builder/: main.py
apps/lion_page_builder/tests/: test_lion_page_builder.py
apps/lion_pkg_builder/: Dockerfile  README.md  build_docker.sh  publish_docker.sh  pyproject.toml  test_lion_pkg_builder.sh
apps/lion_pkg_builder/lion_pkg_builder/: main.py
apps/recommendation_engine/: Dockerfile  README.md  build_docker.sh  publish_docker.sh  pyproject.toml  test_recommendation_engine.sh
apps/recommendation_engine/recommendation_engine/: gw_elasticsearch.py  main.py
apps/sitemap_generator/: Dockerfile  README.md  build_docker.sh  publish_docker.sh  pyproject.toml  run_sitemap_generator.sh
apps/sitemap_generator/sitemap_generator/: main.py
apps/strapi_converter/: pyproject.toml
apps/strapi_converter/strapi_converter/: main.py
apps/strapi_converter/strapi_converter/template/: ditamap.j2
frontend/flail_ssg/: .gitignore  Dockerfile  README.md  build_docker.sh  publish_docker.sh  pyproject.toml  run_tests.sh  setEnv.ps1  test_flail_ssg.sh
frontend/flail_ssg/flail_ssg/: access_controller.py  config_generator.py  generator.py  helpers.py  logger.py  main.py  preprocessor.py  publisher.py  template_writer.py  validator.py
frontend/flail_ssg/tests/: test_flail_ssg.py  test_pages_config.py
search_indexer/: .gitignore  Dockerfile  pyproject.toml
search_indexer/doc_crawler/: elasticsearch.py  pipelines.py  settings.py
search_indexer/kube/: deployment-prod.yml
search_indexer/src/templates/: broken-links.html
search_indexer/tests/test_doc_crawler/: test_doc_crawler.py
search_indexer/tests/test_doc_crawler/resources/expected/: broken-links.json
server/frontend/: generate_page.py  pyproject.toml
server/frontend/pages/: generate_page.py
server/frontend/pages/cloudProducts/: index.json
server/frontend/pages/cloudProducts/banff/: index.json
server/frontend/pages/cloudProducts/cortina/: index.json
server/frontend/pages/selfManagedProducts/: index.json
server/frontend/templates/: page.html  page.j2  productFamily.html
(+10920 files in other folders)
