[tool.poetry]
name = "docportalindex"
version = "0.1.0"
description = "An application to prepare a search index for the doc portal"
authors = ["Guidewire"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"
scrapy = "^2.1.0"
elasticsearch = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
