[tool.poetry]
name = "config_deployer"
version = "1.0.0"
description = "An application to clean the search index for the doc portal"
authors = ["Guidewire <doctools@guidewire.com>"]
readme = "README.md"
repository = "ssh://git@stash.guidewire.com/doctools/documentation-portal.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary",
    "Operating System :: OS Independent",
]
[tool.poetry.scripts]
config_deployer = "config_deployer.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"