[tool.poetry]
name = "lion_pkg_builder"
version = "1.0.0"
description = "A tool to generate a zip file containing contents of a repo used in a DITA build"
authors = ["Guidewire <doctools@guidewire.com>"]
readme = "README.md"
repository = "ssh://git@stash.guidewire.com/doctools/documentation-portal.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
lion_pkg_builder = "lion_pkg_builder.main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
