[tool.poetry]
name = "recommendation_engine"
version = "0.1.0"
description = "A tool that creates AI-based recommendations for doc users"
authors = ["Guidewire <dbrennan@guidewire.com>"]
readme = "README.md"
repository = "ssh://git@stash.guidewire.com/doctools/recommendation-engine.git"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.4"
pandas = "^1.3.3"
eland = "^7.14.1-beta.1"
sklearn = "^0.0"
requests = "^2.26.0"
Pillow = "^8.3.2"
gensim = "^3.8"
elasticsearch = "^7.15.0"

[tool.poetry.scripts]
recommendation_engine = "recommendation_engine.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
