[tool.poetry]
name = "strapi_converter"
version = "0.1.0"
description = "A tool for getting DITA input from the Strapi API"
authors = ["Guidewire <doctools@guidewire.com>"]
repository = "ssh://git@stash.guidewire.com/doctools/documentation-portal.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
strapi_converter = "strapi_converter.main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
