[tool.poetry]
name = "flail_ssg"
version = "0.1.0"
description = "A super simple generator for building doc portal pages"
authors = ["Guidewire <doctools@guidewire.com>"]
readme = "README.md"
repository = "ssh://git@stash.guidewire.com/doctools/documentation-portal.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary",
    "Operating System :: OS Independent",
]
[tool.poetry.scripts]
flail_ssg = "flail_ssg.main:main"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"