[tool.poetry]
name = "generate_landing_pages"
version = "0.1.0"
description = ""
authors = ["Doc Tools <doctools@guidewire.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
